--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
         android:id="@+id/outputField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text=""
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
-        />
+        app:layout_constraintVertical_bias="0.3" />
 
     <EditText
         android:id="@+id/editTextField"
@@ -31,19 +32,18 @@
         />
 
     <Button
-        android:onClick="printText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Press Me!"
+        android:background="@android:color/background_light"
+        android:onClick="printText"
+        android:text="Press Me To Print A Text!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.651"
 
 
-
-        />
+        app:layout_constraintVertical_bias="0.651" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
